# RAG-C

./: .gitignore  Makefile  README.md  mkdocs.yml  prd.md  pyproject.toml  pytest.ini  requirements.txt
.zencoder/rules/: repo.md
api/: main.py  observability.py
docs/: index.md
docs/api/: core.md
docs/components/: advanced-processing.md
docs/getting-started/: installation.md  quickstart.md
examples/: advanced_usage.py  basic_usage.py  complete_example.py
rag/: config.py  factory.py  interfaces.py  knowledge_graph.py  memory.py  models.py  pipeline.py  vector_store.py
tests/: conftest.py  test_pipeline.py
tests/unit/: test_hybrid_retrieval.py  test_pipeline.py  test_vector_stores.py
uni_rag/: __init__.py  config.py  docling_ingestion.py  embeddings.py  enhanced_text_sink.py  factory.py  graph_sink.py  grounding.py  ingestion.py  ingestion_stream.py  interfaces.py  langgraph_orchestrator.py  llm_orchestrator.py  models.py  normalizer.py  pipeline.py  reranker.py  retrieval_hybrid.py  text_sink.py  unified_ingestion.py  vector_store.py  web_ingestion.py
uni_rag/mcp/: __init__.py  host.py  transports.py
uni_rag/text_indexes/: __init__.py  base.py  elasticsearch_index.py  opensearch_index.py
uni_rag/vector_stores/: __init__.py  astra_store.py  base.py  qdrant_store.py
