[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RAG-C"
version = "0.1.0"
description = "MCP-First, Type-C RAG Platform - Universal RAG engine with pluggable components"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "aiohttp>=3.8.0",
    "asyncio-mqtt>=0.13.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "prometheus-client>=0.17.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
astradb = ["astrapy>=0.7.0"]
qdrant = ["qdrant-client>=1.6.0"]
neo4j = ["neo4j>=5.0.0"]
opensearch = ["opensearch-py>=2.3.0"]
elasticsearch = ["elasticsearch>=8.0.0"]
redis = ["redis>=4.5.0"]
embeddings = ["google-generativeai>=0.3.0"]
all = [
    "astrapy>=0.7.0",
    "qdrant-client>=1.6.0", 
    "neo4j>=5.0.0",
    "opensearch-py>=2.3.0",
    "elasticsearch>=8.0.0",
    "redis>=4.5.0",
    "google-generativeai>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/RAG-C"
Repository = "https://github.com/yourusername/RAG-C"
Documentation = "https://RAG-C.readthedocs.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["RAG-C*"]

[tool.setuptools.package-data]
RAG-C = ["py.typed"]